tests/NormalTests/paczka1/fuzzy1/57234160.err
Error in line 1: gji S672 44,5
Error in line 2: gji S545 64,8
Error in line 12: X6N S694 5,0
